--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,14 @@
 HELP.md
-target/
+.gradle
+build/
+!gradle/wrapper/gradle-wrapper.jar
+!**/src/main/**/build/
+!**/src/test/**/build/
+
 .idea
 *.iws
 *.iml
 *.ipr
 out/
-.DS_Store
+!**/src/main/**/out/
+!**/src/test/**/out/
